add role section to playbook file

--- a/main.yml
+++ b/main.yml
@@ -6,3 +6,9 @@
 - name: print message
   debug:
     msg: '{{ print_result.stdout_lines }}'
+---
+- name: Exercise #1
+  hosts: localhost
+
+  roles:
+    - print
