change content of main.yml playbook and main.yml task files

--- a/roles/print/tasks/main.yml
+++ b/roles/print/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
-- name: Exercise #1
-  hosts: localhost
+  - name: Print env variable
+    shell: echo $PATH
+    register: print_result
 
-  roles:
-    - print
+  - name: print message
+    debug:
+      msg: "{{ print_result.stdout_lines }}"
